[CREATE] Crew의 크기 유효성 검사 기능 구현 완료